--- a/pages/main.html
+++ b/pages/main.html
@@ -20,18 +20,18 @@
     <div id="buttons">
       <div class="row button">
         <div class="col-sm d-flex justify-content-end">
-          <button type="button" class="btn btn-success text-nowrap rounded-pill">Castlebrook Apartments</button>
+          <a href="castlebrook" role="button" class="btn btn-success text-nowrap rounded-pill">Castlebrook Apartment</a>
         </div>
         <div class="col-sm d-flex justify-content-start">
-          <button type="button" class="btn btn-success text-nowrap rounded-pill">Clifton Ridge Townhomes</button>
+          <a href="clifton" role="button" class="btn btn-success text-nowrap rounded-pill">Clifton Ridge Townhomes</a>
         </div>
       </div>
       <div class="row button">
         <div class="col-sm d-flex justify-content-end">
-          <button type="button" class="btn btn-success text-nowrap rounded-pill">Orchard Springs Townhomes</button>
+          <a href="orchard" role="button" class="btn btn-success text-nowrap rounded-pill">Orchard Springs Townhomes</a>
         </div>
         <div class="col-sm d-flex justify-content-start">
-          <button type="button" class="btn btn-success text-nowrap rounded-pill">Victorian Village Apartments</button>
+          <a href="victorian" role="button" class="btn btn-success text-nowrap rounded-pill">Victorian Village Apartments</a>
         </div>
       </div>
     </div>
