worked on cb home page and added photos

--- a/pages/main.html
+++ b/pages/main.html
@@ -12,26 +12,26 @@
 <body>
   <div class="center">
     <div class="row">
-      <h1>Marietta Luxury Homes</h1>
+      <h1 id="title">Marietta Luxury Homes</h1>
     </div>
     <div class="row">
-      <p>Choose your property</p>
+      <p>Choose your property:</p>
     </div>
     <div id="buttons">
       <div class="row button">
         <div class="col-sm d-flex justify-content-end">
-          <a href="castlebrook" role="button" class="btn btn-success text-nowrap rounded-pill">Castlebrook Apartment</a>
+          <a href="castlebrook.html" role="button" class="btn btn-success text-nowrap rounded-pill">Castlebrook Apartments</a>
         </div>
         <div class="col-sm d-flex justify-content-start">
-          <a href="clifton" role="button" class="btn btn-success text-nowrap rounded-pill">Clifton Ridge Townhomes</a>
+          <a href="clifton.html" role="button" class="btn btn-success text-nowrap rounded-pill">Clifton Ridge Townhomes</a>
         </div>
       </div>
       <div class="row button">
         <div class="col-sm d-flex justify-content-end">
-          <a href="orchard" role="button" class="btn btn-success text-nowrap rounded-pill">Orchard Springs Townhomes</a>
+          <a href="orchard.html" role="button" class="btn btn-success text-nowrap rounded-pill">Orchard Springs Townhomes</a>
         </div>
         <div class="col-sm d-flex justify-content-start">
-          <a href="victorian" role="button" class="btn btn-success text-nowrap rounded-pill">Victorian Village Apartments</a>
+          <a href="victorian.html" role="button" class="btn btn-success text-nowrap rounded-pill">Victorian Village Apartments</a>
         </div>
       </div>
     </div>
