--- a/pages/castlebrook.html
+++ b/pages/castlebrook.html
@@ -19,7 +19,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
+    <div class="container-fluid nav-info">
       <a class="navbar-brand" href="#">Castlebrook Apartments</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,12 +53,20 @@
   </nav>
 
   <div class="card">
-    <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">Welcome to Castlebrook Apartments, we would love to welcome you to our community!</p>
+    <div class="row">
+      <div class="col-sm-8">
+        <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
+      </div>
+      <div class="col-sm-4">
+        <div class="card-body">
+          <h2>Castlebrook Apartments</h2>
+        </div>
+      </div>
     </div>
+
+
   </div>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
