--- a/pages/castlebrook.html
+++ b/pages/castlebrook.html
@@ -52,19 +52,32 @@
     </div>
   </nav>
 
-  <div class="card">
-    <div class="row">
-      <div class="col-sm-8">
-        <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
-      </div>
-      <div class="col-sm-4">
-        <div class="card-body">
-          <h2>Castlebrook Apartments</h2>
-        </div>
+  <div class="card row">
+    <div class="card-cont col-sm-7">
+      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
+    </div>
+    <div class="card-cont col-sm-5">
+      <div class="card-body">
+        <h5>WELCOME TO</h5>
+        <h1>Castlebrook Apartments</h1>
       </div>
     </div>
+  </div>
 
-
+  <div class="card row">
+    <div class="card-cont col-sm-5">
+      <div class="card-body">
+        <h1>Contact</h1>
+        <hr>
+        <h5>(770) 426-8904</h5>
+        <h5>Castlebrook Apartments <br>
+          860 Franklin Gateway SE <br>
+          Marietta, Ga 30067</h5>
+      </div>
+    </div>
+    <div class="card-cont col-sm-7">
+      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
