--- a/pages/cb-pages/cb-gallery.html
+++ b/pages/cb-pages/cb-gallery.html
@@ -3,24 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Castlebrook Apartments</title>
+  <title>Gallery</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-image: url(../photos/castlebrook-ext.jpeg);
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-  </style>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid nav-info">
-      <a class="navbar-brand" href="#">Castlebrook Apartments</a>
+      <a class="navbar-brand" href="../castlebrook.html">Castlebrook Apartments</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./cb-pages/cb-availability.html">Availability</a>
+            <a class="nav-link" href="./cb-availability.html">Availability</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link active" href="./cb-gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="./cb-contact.html">Contact</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,35 +43,6 @@
       </div>
     </div>
   </nav>
-
-  <div class="card row">
-    <div class="card-cont col-sm-7">
-      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
-    </div>
-    <div class="card-cont col-sm-5">
-      <div class="card-body">
-        <h5>WELCOME TO</h5>
-        <h1>Castlebrook Apartments</h1>
-      </div>
-    </div>
-  </div>
-
-  <div class="card row">
-    <div class="card-cont col-sm-5">
-      <div class="card-body">
-        <h1>Contact</h1>
-        <hr>
-        <h5>(770) 426-8904</h5>
-        <h5>Castlebrook Apartments <br>
-          860 Franklin Gateway SE <br>
-          Marietta, Ga 30067</h5>
-      </div>
-    </div>
-    <div class="card-cont col-sm-7">
-      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
-    </div>
-  </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
