--- a/pages/cb-pages/cb-availability.html
+++ b/pages/cb-pages/cb-availability.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1024">
   <title>Availability</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,6 +13,11 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
+    }
+
+    .row {
+      margin-top: 30px;
+      margin-bottom: 30px;
     }
   </style>
 </head>
@@ -56,30 +61,37 @@
   </nav>
 
   <div class="card" style="width: 50%; height: 50%;">
-    <div class="card-body">
-      <div class="row" style="height: 50%;">
+    <div class="card-body" style="padding-top: 0;">
+      <div class="row" style="margin-top: 0;">
+        <h3 style="font-style: italic;">ALL RENT PRICES INCLUDE WATER AND TRASH</h3>
+      </div>
+      <div class="row">
         <div class="col-sm">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <div>
+            <h5 class="card-title">1 Bed 1 Bath</h5>
+            <h6 class="card-subtitle mb-2 text-muted">$1050/Month</h6>
+            <h6 class="card-subtitle mb-2 text-muted">800 sq/ft</h6>
+            <p class="card-text">Available 2/28/22</p>
+          </div>
         </div>
         <div class="col-sm">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <div>
+            <h5 class="card-title">2 Bed 1.5 Bath</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
         </div>
       </div>
-      <div class="row" style="height: 50%;">
+      <div class="row">
         <div class="col-sm">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">2 Bed 2 Bath</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
         <div class="col-sm">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">3 Bed 2 Bath</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
