--- a/pages/cb-pages/cb-availability.html
+++ b/pages/cb-pages/cb-availability.html
@@ -16,8 +16,8 @@
     }
 
     .row {
-      margin-top: 30px;
-      margin-bottom: 30px;
+      margin-top: 50px;
+      margin-bottom: 50px;
     }
   </style>
 </head>
@@ -60,13 +60,13 @@
     </div>
   </nav>
 
-  <div class="card" style="width: 50%; height: 50%;">
+  <div class="card" style="width: 50%; height: 50%; padding-bottom: 25px;">
     <div class="card-body" style="padding-top: 0;">
       <div class="row" style="margin-top: 0;">
         <h3 style="font-style: italic;">ALL RENT PRICES INCLUDE WATER AND TRASH</h3>
       </div>
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm d-flex justify-content-end" style="margin-right: 30px;">
           <div>
             <h5 class="card-title">1 Bed 1 Bath</h5>
             <h6 class="card-subtitle mb-2 text-muted">$1050/Month</h6>
@@ -74,27 +74,31 @@
             <p class="card-text">Available 2/28/22</p>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-sm d-flex justify-content-start" style="margin-left: 30px;">
           <div>
             <h5 class="card-title">2 Bed 1.5 Bath</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
+            <h6 class="card-subtitle mb-2 text-muted">$1200/Month</h6>
+            <h6 class="card-subtitle mb-2 text-muted">sq/ft</h6>
+            <p class="card-text">Available 2/28/22</p>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm">
-          <h5 class="card-title">2 Bed 2 Bath</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+      <div class="row" style="margin-bottom: 30px;">
+        <div class="col-sm d-flex justify-content-end" style="margin-right: 30px;">
+          <div>
+            <h5 class="card-title">2 Bed 2 Bath</h5>
+            <h6 class="card-subtitle mb-2 text-muted">$1265/Month</h6>
+            <h6 class="card-subtitle mb-2 text-muted">sq/ft</h6>
+            <p class="card-text">Available 3/31/22</p>
+          </div>
         </div>
-        <div class="col-sm">
-          <h5 class="card-title">3 Bed 2 Bath</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+        <div class="col-sm d-flex justify-content-start" style="margin-left: 30px;">
+          <div>
+            <h5 class="card-title">3 Bed 2 Bath</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+            <h6 class="card-subtitle mb-2 text-muted">sq/ft</h6>
+            <p class="card-text">Unavailable</p>
+          </div>
         </div>
       </div>
     </div>
