--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -7,6 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../style.css">
+  <style>
+    body {
+      background-image: url(../../photos/castlebrook-ext.jpeg);
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  </style>
 </head>
 
 <body>
@@ -20,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./cb-pages/cb-availability.html">Availability</a>
+            <a class="nav-link" href="./cb-availability.html">Availability</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cb-gallery.html">Gallery</a>
@@ -46,6 +54,29 @@
       </div>
     </div>
   </nav>
+
+  <div class="card" style="width: 50%;">
+    <div class="card-body">
+      <h2 class="card-title">Apply Now</h2>
+      <h5 class="card-title">To apply, please download the documents below, fill them out, and then return them to our
+        leasing office with the application fee in money order.</h5>
+      <p class="card-text">To avoid any confusion, please make sure you bring everything together.
+        <br>
+        You can email it to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a>
+        <br>
+        or Mail it to: 676 Horizon Place, Marietta GA 30062</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
