--- a/pages/cb-pages/cb-availability.html
+++ b/pages/cb-pages/cb-availability.html
@@ -16,8 +16,8 @@
     }
 
     .row {
-      margin-top: 50px;
-      margin-bottom: 50px;
+      margin-top: 8%;
+      margin-bottom: 8%;
     }
   </style>
 </head>
@@ -63,10 +63,11 @@
   <div class="card" style="width: 50%; height: 50%; padding-bottom: 25px;">
     <div class="card-body" style="padding-top: 0;">
       <div class="row" style="margin-top: 0;">
-        <h3 style="font-style: italic;">ALL RENT PRICES INCLUDE WATER AND TRASH</h3>
+        <h2>Availability</h2>
+        <h4 style="font-style: italic;">ALL RENT PRICES INCLUDE WATER AND TRASH</h3>
       </div>
       <div class="row">
-        <div class="col-sm d-flex justify-content-end" style="margin-right: 30px;">
+        <div class="col-sm d-flex justify-content-end" style="margin-right: 10%;">
           <div>
             <h5 class="card-title">1 Bed 1 Bath</h5>
             <h6 class="card-subtitle mb-2 text-muted">$1050/Month</h6>
@@ -74,7 +75,7 @@
             <p class="card-text">Available 2/28/22</p>
           </div>
         </div>
-        <div class="col-sm d-flex justify-content-start" style="margin-left: 30px;">
+        <div class="col-sm d-flex justify-content-start" style="margin-left: 10%;">
           <div>
             <h5 class="card-title">2 Bed 1.5 Bath</h5>
             <h6 class="card-subtitle mb-2 text-muted">$1200/Month</h6>
@@ -83,8 +84,8 @@
           </div>
         </div>
       </div>
-      <div class="row" style="margin-bottom: 30px;">
-        <div class="col-sm d-flex justify-content-end" style="margin-right: 30px;">
+      <div class="row">
+        <div class="col-sm d-flex justify-content-end" style="margin-right: 10%;">
           <div>
             <h5 class="card-title">2 Bed 2 Bath</h5>
             <h6 class="card-subtitle mb-2 text-muted">$1265/Month</h6>
@@ -92,7 +93,7 @@
             <p class="card-text">Available 3/31/22</p>
           </div>
         </div>
-        <div class="col-sm d-flex justify-content-start" style="margin-left: 30px;">
+        <div class="col-sm d-flex justify-content-start" style="margin-left: 10%;">
           <div>
             <h5 class="card-title">3 Bed 2 Bath</h5>
             <h6 class="card-subtitle mb-2 text-muted">Price</h6>
