worked on cb-apply and added cb documents

--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -59,21 +59,18 @@
     <div class="card-body">
       <h2 class="card-title">Apply Now</h2>
       <h5 class="card-title">To apply, please download the documents below, fill them out, and then return them to our
-        leasing office with the application fee in money order.</h5>
-      <p class="card-text">To avoid any confusion, please make sure you bring everything together.
-        <br>
-        You can email it to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a>
-        <br>
+        leasing office with the application and admin fees as money orders.</h5>
+      <p class="card-text">
+        To avoid any confusion, please make sure you bring everything together.<br>
+        You can email it to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a><br>
         or Mail it to: 676 Horizon Place, Marietta GA 30062</p>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">An item</li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-    </ul>
+    <hr>
+    <h5 class="card-body">Documents:</h5>
     <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <button type="button" class="btn btn-success">Application</button>
+      <button type="button" class="btn btn-success">Requirements</button>
+      <button type="button" class="btn btn-success">Rental Verification</button>
     </div>
   </div>
 
