added download links to apply page

--- a/pages/castlebrook.html
+++ b/pages/castlebrook.html
@@ -73,6 +73,7 @@
       <div class="card-body">
         <h1>Contact</h1>
         <hr>
+        <h5><a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a></h5>
         <h5>(770) 426-8904</h5>
         <h5>Castlebrook Apartments <br>
           860 Franklin Gateway SE <br>
