--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -68,9 +68,9 @@
     <hr>
     <h5 class="card-body">Documents:</h5>
     <div class="card-body">
-      <button type="button" class="btn btn-success">Application</button>
-      <button type="button" class="btn btn-success">Requirements</button>
-      <button type="button" class="btn btn-success">Rental Verification</button>
+      <a href="../../docs/cb/cb-application.pdf" download="Castlebrook Application" role="button" class="btn btn-success text-nowrap rounded-pill">Application</a>
+      <a href="../../docs/cb/cb-requirements.pdf" download="Castlebrook Requirements" role="button" class="btn btn-success text-nowrap rounded-pill">Requirements</a>
+      <a href="../../docs/cb/cb-rental-verification.pdf" download="Castlebrook Rental Verification" role="button" class="btn btn-success text-nowrap rounded-pill">Rental Verification</a>
     </div>
   </div>
 
