--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -58,12 +58,12 @@
   <div class="card" style="width: 50%;">
     <div class="card-body">
       <h2 class="card-title">Apply Now</h2>
-      <h5 class="card-title">To apply, please download the documents below, fill them out, and then return them to our
+      <h5 class="card-title">To apply, please download the documents below, fill them out, and return them to our
         leasing office with the application and admin fees as money orders.</h5>
       <p class="card-text">
-        To avoid any confusion, please make sure you bring everything together.<br>
-        You can email it to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a><br>
-        or Mail it to: 676 Horizon Place, Marietta GA 30062</p>
+        To avoid any confusion, please bring all documents at the same time.<br>
+        You can also email your application to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a><br>
+        or mail it to: 860 Franklin Gateway SE, Marietta, Ga 30067</p>
     </div>
     <hr>
     <h5 class="card-body">Documents:</h5>
