--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -62,15 +62,19 @@
         leasing office with the application and admin fees as money orders.</h5>
       <p class="card-text">
         To avoid any confusion, please bring all documents at the same time.<br>
-        You can also email your application to: <a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a><br>
+        You can also email your application to: <a
+          href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a><br>
         or mail it to: 860 Franklin Gateway SE, Marietta, Ga 30067</p>
     </div>
     <hr>
     <h5 class="card-body">Documents:</h5>
     <div class="card-body">
-      <a href="../../docs/cb/cb-application.pdf" download="Castlebrook Application" role="button" class="btn btn-success text-nowrap rounded-pill">Application</a>
-      <a href="../../docs/cb/cb-requirements.pdf" download="Castlebrook Requirements" role="button" class="btn btn-success text-nowrap rounded-pill">Requirements</a>
-      <a href="../../docs/cb/cb-rental-verification.pdf" download="Castlebrook Rental Verification" role="button" class="btn btn-success text-nowrap rounded-pill">Rental Verification</a>
+      <a href="../../docs/cb/cb-application.pdf" download="Castlebrook Application" role="button"
+        class="btn btn-success text-nowrap rounded-pill">Application</a>
+      <a href="../../docs/cb/cb-requirements.pdf" download="Castlebrook Requirements" role="button"
+        class="btn btn-success text-nowrap rounded-pill">Requirements</a>
+      <a href="../../docs/cb/cb-rental-verification.pdf" download="Castlebrook Rental Verification" role="button"
+        class="btn btn-success text-nowrap rounded-pill">Rental Verification</a>
     </div>
   </div>
 
