added info to contact page and some formatting

--- a/pages/cb-pages/cb-apply.html
+++ b/pages/cb-pages/cb-apply.html
@@ -58,7 +58,7 @@
   <div class="card" style="width: 50%;">
     <div class="card-body">
       <h2 class="card-title">Apply Now</h2>
-      <h5 class="card-title">To apply, please download the documents below, fill them out, and return them to our
+      <h5 class="card-title" style="font-style: italic;">To apply, please download the documents below, fill them out, and return them to our
         leasing office with the application and admin fees as money orders.</h5>
       <p class="card-text">
         To avoid any confusion, please bring all documents at the same time.<br>
