--- a/pages/cb-pages/cb-contact.html
+++ b/pages/cb-pages/cb-contact.html
@@ -57,12 +57,15 @@
 
   <div class="card" style="width: 50%;">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h2 class="card-title">Contact Us</h2>
+      <p class="card-text" style="font-style: italic;">Feel free to email, call, or come see us with any questions you may have. Our offices are
+        open from 1pm - 5pm on weekdays, and on Saturdays by appointment.</p>
+      <hr>
+      <h5><a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a></h5>
+      <h5>(770) 426-8904</h5>
+      <h5>Castlebrook Apartments <br>
+        860 Franklin Gateway SE <br>
+        Marietta, Ga 30067</h5>
     </div>
   </div>
 
