--- a/pages/cb-pages/cb-availability.html
+++ b/pages/cb-pages/cb-availability.html
@@ -16,8 +16,8 @@
     }
 
     .row {
-      margin-top: 8%;
-      margin-bottom: 8%;
+      margin-top: 5%;
+      margin-bottom: 5%;
     }
   </style>
 </head>
@@ -66,6 +66,7 @@
         <h2>Availability</h2>
         <h4 style="font-style: italic;">ALL RENT PRICES INCLUDE WATER AND TRASH</h3>
       </div>
+      <hr style="margin: 0;">
       <div class="row">
         <div class="col-sm d-flex justify-content-end" style="margin-right: 10%;">
           <div>
