added floor plan dropdown and started gallery page

--- a/pages/cb-pages/cb-availability.html
+++ b/pages/cb-pages/cb-availability.html
@@ -47,6 +47,18 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
+              Floor Plans
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">1 Bed 1 Bath</a></li>
+              <li><a class="dropdown-item" href="#">2 Bed 1.5 Bath</a></li>
+              <li><a class="dropdown-item" href="#">2 Bed 2 Bath</a></li>
+              <li><a class="dropdown-item" href="#">3 Bed 2 Bath</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Other Properties
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
