--- a/pages/cb-pages/cb-contact.html
+++ b/pages/cb-pages/cb-contact.html
@@ -6,7 +6,7 @@
   <title>Contact Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../cb-style.css">
   <style>
     body {
       background-image: url(../../photos/castlebrook-ext.jpeg);
@@ -70,7 +70,8 @@
   <div class="card" style="width: 50%;">
     <div class="card-body">
       <h2 class="card-title">Contact Us</h2>
-      <p class="card-text" style="font-style: italic;">Feel free to email, call, or come see us with any questions you may have. Our offices are
+      <p class="card-text" style="font-style: italic;">Feel free to email, call, or come see us with any questions you
+        may have. Our offices are
         open from 1pm - 5pm on weekdays, and on Saturdays by appointment.</p>
       <hr>
       <h5><a href="mailto: castlebrookmarietta@gmail.com">castlebrookmarietta@gmail.com</a></h5>
