--- a/pages/castlebrook.html
+++ b/pages/castlebrook.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="cb-style.css">
   <style>
     body {
-      background-image: url(../photos/castlebrook-ext.jpeg);
+      background-image: url(../photos/cb/castlebrook-ext.jpeg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
@@ -69,7 +69,7 @@
 
   <div class="card row">
     <div class="card-cont col-sm-7">
-      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
+      <img src="../photos/cb/spt-ext.jpeg" class="card-img-top" alt="...">
     </div>
     <div class="card-cont col-sm-5">
       <div class="card-body">
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="card-cont col-sm-7">
-      <img src="../photos/spt-ext.jpeg" class="card-img-top" alt="...">
+      <img src="../photos/cb/spt-ext.jpeg" class="card-img-top" alt="...">
     </div>
   </div>
 
