--- a/pages/cb-pages/cb-gallery.html
+++ b/pages/cb-pages/cb-gallery.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../cb-style.css">
   <style>
     body {
-      background-image: url(../../photos/castlebrook-ext.jpeg);
+      background-image: url(../../photos/cb/castlebrook-ext.jpeg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
